# parser_bindings

./: CMakeLists.txt  README.md  build.bat  build.sh  main.cpp
app/: main.cpp
lib/: helpers.go  main.go  type.h
